<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Telechips, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
  
  	<!-- Japan Only -->
	<ListPreference
		android:title="@string/preset"
		android:key="preset_select"
		android:entries="@array/preset_select_entries"
		android:entryValues="@array/preset_select_values">
	</ListPreference>

	<!-- ListPreference
		android:title="@string/area_code"
		android:key="area_code_select"
		android:entries="@array/area_code_select_entries"
		android:entryValues="@array/area_code_select_values">
	</ListPreference>
	 -->
	<ListPreference
		android:title="@string/audio"
		android:key="audio_select"
		android:entries="@array/audio_select_entries"
		android:entryValues="@array/audio_select_values">
	</ListPreference>
  
	<ListPreference
		android:title="@string/dual_audio"
		android:key="dual_audio_select"
		android:entries="@array/dual_audio_select_entries"
		android:entryValues="@array/dual_audio_select_values">
	</ListPreference>
  
	<ListPreference
		android:title="@string/caption"
		android:key="caption_select"
		android:entries="@array/caption_select_entries"
		android:entryValues="@array/caption_select_values">
	</ListPreference>
  
	<!-- ListPreference
		android:title="@string/super_impose"
		android:key="super_impose_select"
		android:entries="@array/super_impose_select_entries"
		android:entryValues="@array/super_impose_select_values">
	</ListPreference> -->
  
	<ListPreference
		android:title="@string/storage"
		android:key="storage_select">
	</ListPreference>

</PreferenceScreen>
