<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2013 Telechips, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<ImageView
		android:id="@+id/ttx_display"
		android:layout_x="@dimen/ttx_display_x"
		android:layout_y="@dimen/ttx_display_y"
		android:layout_width="@dimen/ttx_display_width"
		android:layout_height="@dimen/ttx_display_height"
		android:typeface="monospace"
		>
	</ImageView>
	
	<TextView
		android:id="@+id/ttx_header"
		android:layout_x="@dimen/ttx_header_x"
		android:layout_y="@dimen/ttx_header_y"
		android:layout_width="@dimen/ttx_header_width"
		android:layout_height="@dimen/ttx_header_height"
		android:background="@color/color_2"
		android:textColor="@color/color_5"
		android:textSize="@dimen/ttx_header_font"
		>
	</TextView>
	
	<AbsoluteLayout
		android:id="@+id/ttx_menu"
		android:layout_x="@dimen/ttx_menu_x"
		android:layout_y="@dimen/ttx_menu_y"
		android:layout_width="@dimen/ttx_menu_width"
		android:layout_height="@dimen/ttx_menu_height"
		android:background="@color/color_2"
		>
	<TextView
			android:layout_y="@dimen/ttx_title_y"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/ttx_title_height"
			android:background="@drawable/dxb_portable_list_id_icon_n"
			android:gravity="center"
			android:textColor="@color/color_2"
			android:textStyle="bold"
			android:text="@string/ttx"
			>
		</TextView>

		<Button
			android:id="@+id/ttx_page"
			android:layout_x="@dimen/ttx_page_x"
			android:layout_y="@dimen/ttx_page_y"
			android:layout_width="@dimen/ttx_page_width"
			android:layout_height="@dimen/ttx_page_height"
			android:background="@drawable/dxb_portable_ttx_input_box"
			android:gravity="center"
			android:textStyle="bold"
			>
		</Button>

		<Button
			android:id="@+id/ttx_start"
			android:layout_y="@dimen/ttx_start_y"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/ttx_start_height"
			android:textStyle="bold"
			android:text="@string/start"
			>
		</Button>
		
		<Button
			android:id="@+id/ttx_red"
			android:layout_y="@dimen/ttx_red_y"
			android:layout_width="@dimen/ttx_red_width"
			android:layout_height="@dimen/ttx_red_height"
			>
		</Button>
			<ImageView
				android:layout_x="@dimen/ttx_red_rec_x"
				android:layout_y="@dimen/ttx_red_rec_y"
				android:layout_width="@dimen/ttx_red_rec_width"
				android:layout_height="@dimen/ttx_red_rec_height"
				android:background="#FFFF0000"
				android:focusable="false"
				>
			</ImageView>
		
		<Button
			android:id="@+id/ttx_green"
			android:layout_x="@dimen/ttx_green_x"
			android:layout_y="@dimen/ttx_green_y"
			android:layout_width="@dimen/ttx_green_width"
			android:layout_height="@dimen/ttx_green_height"
			>
		</Button>
			<ImageView
				android:layout_x="@dimen/ttx_green_rec_x"
				android:layout_y="@dimen/ttx_green_rec_y"
				android:layout_width="@dimen/ttx_green_rec_width"
				android:layout_height="@dimen/ttx_green_rec_height"
				android:background="#FF00FF00"
				android:focusable="false"
				>
			</ImageView>
		
		<Button
			android:id="@+id/ttx_yellow"
			android:layout_y="@dimen/ttx_yellow_y"
			android:layout_width="@dimen/ttx_yellow_width"
			android:layout_height="@dimen/ttx_yellow_height"
			>
		</Button>
			<ImageView
				android:layout_x="@dimen/ttx_yellow_rec_x"
				android:layout_y="@dimen/ttx_yellow_rec_y"
				android:layout_width="@dimen/ttx_yellow_rec_width"
				android:layout_height="@dimen/ttx_yellow_rec_height"
				android:background="#FFFFFF00"
				android:focusable="false"
				>
			</ImageView>
		
		<Button
			android:id="@+id/ttx_cyan"
			android:layout_x="@dimen/ttx_cyan_x"
			android:layout_y="@dimen/ttx_cyan_y"
			android:layout_width="@dimen/ttx_cyan_width"
			android:layout_height="@dimen/ttx_cyan_height"
			>
		</Button>
			<ImageView
				android:layout_x="@dimen/ttx_cyan_rec_x"
				android:layout_y="@dimen/ttx_cyan_rec_y"
				android:layout_width="@dimen/ttx_cyan_rec_width"
				android:layout_height="@dimen/ttx_cyan_rec_height"
				android:background="#F00FFFFF"
				android:focusable="false"
				>
			</ImageView>		
	
		<Button
			android:id="@+id/ttx_prev"
			android:layout_y="@dimen/ttx_prev_y"
			android:layout_width="@dimen/ttx_prev_width"
			android:layout_height="@dimen/ttx_prev_height"
			android:text="@string/ttx_prev"
			>
		</Button>
	
		<Button
			android:id="@+id/ttx_next"
			android:layout_x="@dimen/ttx_next_x"
			android:layout_y="@dimen/ttx_next_y"
			android:layout_width="@dimen/ttx_next_width"
			android:layout_height="@dimen/ttx_next_height"
			android:text="@string/ttx_next"
			>
		</Button>
	
		<Button
			android:id="@+id/ttx_fprev"
			android:layout_y="@dimen/ttx_fprev_y"
			android:layout_width="@dimen/ttx_fprev_width"
			android:layout_height="@dimen/ttx_fprev_height"
			android:text="@string/ttx_fprev"
			>
		</Button>
	
		<Button
			android:id="@+id/ttx_fnext"
			android:layout_x="@dimen/ttx_fnext_x"
			android:layout_y="@dimen/ttx_fnext_y"
			android:layout_width="@dimen/ttx_fnext_width"
			android:layout_height="@dimen/ttx_fnext_height"
			android:text="@string/ttx_fnext"
			>
		</Button>
		
		<Button
			android:id="@+id/ttx_off"
			android:layout_y="@dimen/ttx_off_y"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/ttx_off_height"
			android:text="@string/off"
			>
		</Button>			
	</AbsoluteLayout>	
</AbsoluteLayout>