<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2013 Telechips, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<AbsoluteLayout
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	    >
  		<Button
		android:id="@+id/full_menu1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#00000000"
		android:focusable="true"
		android:focusableInTouchMode="true"
			>
		</Button>
		
  		<LinearLayout 
			android:orientation="vertical"
	 		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
  		    >
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
  		    <ImageView
				android:id="@+id/full_menu1_icon"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="3"
				android:focusable="false"
				>
			</ImageView>
			<TextView
				android:id="@+id/full_menu1_text"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:textColor="@color/color_9"
				android:gravity="center"
				android:text="@string/channel"
				android:focusable="false"
				>
			</TextView>
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
		</LinearLayout>	    	    
	</AbsoluteLayout>

	<AbsoluteLayout
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	    >
  		<Button
		android:id="@+id/full_menu2"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#00000000"
		android:focusable="true"
		android:focusableInTouchMode="true"
			>
		</Button>
		
  		<LinearLayout 
			android:orientation="vertical"
	 		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
  		    >
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
  		    <ImageView
				android:id="@+id/full_menu2_icon"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="3"
				android:focusable="false"
				>
			</ImageView>
			<TextView
				android:id="@+id/full_menu2_text"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:textColor="@color/color_9"
				android:gravity="center"
				android:text="@string/screen"
				android:focusable="false"
				>
			</TextView>
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
		</LinearLayout>	    	    
	</AbsoluteLayout>	

	<AbsoluteLayout
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	    >
  		<Button
		android:id="@+id/full_menu3"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#00000000"
		android:focusable="true"
		android:focusableInTouchMode="true"
			>
		</Button>
		
  		<LinearLayout 
			android:orientation="vertical"
	 		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
  		    >
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
  		    <ImageView
				android:id="@+id/full_menu3_icon"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="3"
				android:focusable="false"
				>
			</ImageView>
			<TextView
				android:id="@+id/full_menu3_text"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:textColor="@color/color_9"
				android:gravity="center"
				android:text="@string/epg"
				android:focusable="false"
				>
			</TextView>
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
		</LinearLayout>	    	    
	</AbsoluteLayout>

	<AbsoluteLayout
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	    >
  		<Button
		android:id="@+id/full_menu4"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#00000000"
		android:focusable="true"
		android:focusableInTouchMode="true"
			>
		</Button>
		
  		<LinearLayout 
			android:orientation="vertical"
	 		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
  		    >
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
  		    <ImageView
				android:id="@+id/full_menu4_icon"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="3"
				android:focusable="false"
				>
			</ImageView>
			<TextView
				android:id="@+id/full_menu4_text"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:textColor="@color/color_9"
				android:gravity="center"
				android:text="@string/record"
				android:focusable="false"
				>
			</TextView>
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
		</LinearLayout>	    	    
	</AbsoluteLayout>

	<AbsoluteLayout
	    android:id="@+id/full_menu5_layout"
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	    >
  		<Button
		android:id="@+id/full_menu5"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#00000000"
		android:focusable="true"
		android:focusableInTouchMode="true"
			>
		</Button>
		
  		<LinearLayout 
			android:orientation="vertical"
	 		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
  		    >
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
  		    <ImageView
				android:id="@+id/full_menu5_icon"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="3"
				android:focusable="false"
				>
			</ImageView>
			<TextView
				android:id="@+id/full_menu5_text"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:textColor="@color/color_9"
				android:gravity="center"
				android:text="@string/capture"
				android:focusable="false"
				>
			</TextView>
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
 		</LinearLayout>	    	    
	</AbsoluteLayout>	

	<AbsoluteLayout
	    android:id="@+id/full_menu6_layout"
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	    >
  		<Button
		android:id="@+id/full_menu6"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#00000000"
		android:focusable="true"
		android:focusableInTouchMode="true"
			>
		</Button>
		
  		<LinearLayout 
			android:orientation="vertical"
	 		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
  		    >
			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
			<ImageView
				android:id="@+id/full_menu6_icon"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="3"
				android:focusable="false"
				>
			</ImageView>
			<TextView
				android:id="@+id/full_menu6_text"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:textColor="@color/color_9"
				android:gravity="center"
				android:text="@string/option"
				android:focusable="false"
				>
			</TextView>
 			<View
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
			    >
			</View>
		</LinearLayout>	    	    
	</AbsoluteLayout>	
</LinearLayout>