<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Telechips, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:baselineAligned="false"
	>
	<AbsoluteLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		>
			<!-- tab count == 1 -->
			<LinearLayout
			    android:id="@+id/list_tab1"
				android:orientation="horizontal"
				android:visibility="invisible"
				android:background="@drawable/dxb_portable_tab_bg_f"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:focusable="false"
			    >
			    <ImageView
					android:src="@drawable/dxb_portable_tab_tv_btn_f"
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:focusable="false"
			        />
				<TextView
				    android:id="@+id/list_tab1_text"
					android:text="@string/channel_list"
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:layout_weight="5"
					android:textColor="@color/color_3"
					android:gravity="center_vertical"
					android:focusable="false"
					/>
			</LinearLayout>
	
		    <!-- tab count == 2 -->
		    <LinearLayout
			    android:id="@+id/list_tab2"
				android:orientation="horizontal"
				android:visibility="invisible"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
		        >
				<!-- tab2_1 -->
				<LinearLayout
				    android:id="@+id/list_tab2_1"
					android:orientation="horizontal"
					android:background="@drawable/dxb_portable_tab_bg_f"
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:focusable="true"
				    >
					<View
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="1"
						android:focusable="false"
					    />
				    <ImageView
				        android:id="@+id/list_tab2_1_image"
						android:src="@drawable/dxb_portable_tab_tv_btn_f"
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="7"
						android:focusable="false"
				        />
					<View
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="1"
						android:focusable="false"
					    />
				    <TextView
				        android:id="@+id/list_tab2_1_text"
						android:text="@string/tv_channel"
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="20"
						android:textColor="@color/color_8"
						android:gravity="center_vertical"
						android:focusable="false"
						/>
				</LinearLayout>
		        				
				<!-- tab2_2 -->
				<LinearLayout
				    android:id="@+id/list_tab2_2"
					android:orientation="horizontal"
					android:background="@drawable/dxb_portable_tab_bg_n"
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:focusable="false"
				    >
					<View
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="1"
						android:focusable="false"
					    />
				    <ImageView
						android:id="@+id/list_tab2_2_image"
						android:src="@drawable/dxb_portable_tab_radio_btn_n"
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="7"
						android:focusable="false"
				        />
					<View
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="1"
						android:focusable="false"
					    />
				    <TextView
				        android:id="@+id/list_tab2_2_text"
						android:text="@string/radio_channel"
						android:layout_width="0dp"
						android:layout_height="fill_parent"
						android:layout_weight="20"
						android:textColor="@color/color_9"
						android:gravity="center_vertical"
						android:focusable="false"
						/>
				</LinearLayout>
		    </LinearLayout>
	</AbsoluteLayout>

	<AbsoluteLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="6"
		android:background="@color/color_3"
		>
		<ListView
			android:id="@+id/list_service"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@color/color_2"
			android:cacheColorHint="#00000000"
			android:scrollbarStyle="outsideInset"
			android:scrollbarSize="10px"
			android:dividerHeight="1px"
			android:focusable="true"
			/>
		
		<TextView
			android:id="@+id/list_message"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:focusable="false"
			/>
	</AbsoluteLayout>
</LinearLayout>